Fixing issue with RC Slider tooltip being drawn over by other components. The z-index for the tooltip needed to be increased

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -169,6 +169,10 @@ body {
     color: blue;
 }
 
+.rc-slider-tooltip { 
+    z-index: 2; 
+}
+
 .bottomInputs {
     grid-column-start: 2;
     grid-column-end: 3;
